Masthead map alignment fix

--- a/resources/assets/sass/components/_masthead.scss
+++ b/resources/assets/sass/components/_masthead.scss
@@ -104,6 +104,7 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            top: 0;
         }
 
             .c-masthead__map-map {
